Change log for gfsm

v0.0.8 Sun, 11 Dec 2005 15:53:37 +0100
   + added support for final weights
   + changed binary format (backwards-compatible with dispatch function)
   + added final-weight operations final_weight_(plus|times)()
   + added optional(), replace(), insert_automaton()
   + added lookup_viterbi(), viterbi_trellis_paths(), viterbi_trellis_bestpath()
   + fixed a bug in gfsm_automaton_renumber_states()
   + fixed some bugs in gfsm_automaton_rmepsilon()
   + fixed an epsilon-related bug in compose() and intersect()
   + added gfsmScanner.[ch], gfsmRegexCompiler.[ch]
   + added gfsmTrie, (quasi-)deterministic input acceptor (i/o pairs)
     - currently geared towards storing frequencies

v0.0.7 Sun, 20 Nov 2005 14:39:33 +0100
   + added lookup(), paths(), path<->string conversion functions
   + added semiring type "plog" (positive logs), added stable gfsm_log_add() function
   + added intersect(), compose(), difference(), product(), rmepsilon() operations
   + gobble less memory on load_bin_file() -- load states & arcs incrementally
     - doing this right would require a stored binary file incompatibility, currently hacked.
   + fixed a number of small bugs

v0.0.6 Mon, 12 Sep 2005 01:45:46 +0200
   + added mingw32 patch (getline)

v0.0.5 Wed, 22 Sep 2004 00:23:49 +0200
   + removed references to file "LICENSE" in header comments
   + fixed small size bug in clear() for gfsmUserAlphabet
   + added key-stringification to gfsm_automaton_draw() methods

v0.0.4 Tue, 14 Sep 2004 15:57:56 +0200
   + fixed bug in gfsm_alphabet_size() for user alphabets

v0.0.3 Mon, 13 Sep 2004 10:25:23 +0200
   + added some algebraic operations, fixed some bugs

v0.0.2 Thu,  2 Sep 2004 17:34:18 +0200
   + basic accessors and algebra

v0.0.1 Tue, 24 Aug 2004 11:34:59 +0200
   + created