@@ -39,6 +39,15 @@ dnl AC_PROG_CXX
 dnl AC_LANG(C++)
 
 ##vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
+## gnulib
+gl_EARLY
+gl_INIT
+dnl /gnulib
+dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+
+
+##vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
 ## flex, bison
 
 AC_ARG_VAR(FLEX, [Path to GNU flex])
@@ -76,9 +85,12 @@ AC_PROG_YACC
 LEX="$FLEX"
 YACC="$BISON"
 
+## /flex+bison
+##^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-dnl vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
-dnl zlib
+
+##vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
+## zlib
 
 AC_ARG_ENABLE(zlib,
 	AC_HELP_STRING([--disable-zlib],
@@ -129,14 +141,20 @@ if test "$ac_cv_enable_zlib" != "no" ; then
  DOXY_DEFINES="$DOXY_DEFINES GFSM_ZLIB_ENABLED=1"
 fi
 
-dnl /zlib
-dnl ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+## /zlib
+##^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 ##vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
-## Getline
+## gnulib: funcs
 
-AC_CHECK_FUNCS(getline)
+dnl AC_CHECK_FUNCS(getline)
 
+gl_FUNC_GETDELIM
+gl_FUNC_VASPRINTF
+
+AC_CHECK_FUNCS([vfprintf],[],[])
+
+## /gnulib: funcs
 ##^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 ##vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
@@ -636,6 +654,7 @@ AC_SUBST(gfsm_LIBS)
 dnl
 dnl output
 dnl
+AC_CONFIG_FILES(src/libgfsm/gnulib/Makefile)
 AC_CONFIG_FILES(src/libgfsm/Makefile)
 AC_CONFIG_FILES(src/programs/Makefile)
 dnl AC_CONFIG_FILES(src/programs/gfsmconfig, [chmod 0755 src/programs/gfsmconfig])
